# finex

./: .gitignore  README.md  Results.md  finex.py  pyproject.toml
finex/: analyze_results.py  config.py  fetch_supplements.py  fetch_target.py  prepare_molecules.py  prepare_viz.py  run_docking.py  sdf_utils.py
